Add GoogleTest to project.
This configures CMake to download a fixed version of GoogleTest. It will be used for creating a modular API design, mocking file systems, and network connections, and overrall building confidence for the project as a whole.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,16 @@ add_executable(e7fmgr ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
 target_link_libraries(e7fmgr PUBLIC PkgConfig::GTKMM3)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/e2239ee6043f73722e7aa812a459f54a28552929.zip
+)
+FetchContent_MakeAvailable(googletest)
+enable_testing()
+
+include(GoogleTest) 
+
 message("Done! Binary \"e7mgr\" is stored in build/")
