Change clang-tidy CMake integration tecnhique.
This makes the clang-tidy CMake integration not use the global variable technique, as it later causes problems by linting third-party libraries without a simple fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,19 +8,25 @@ pkg_check_modules(GTKMM3 REQUIRED IMPORTED_TARGET gtkmm-3.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_CXX_CLANG_TIDY "clang-tidy-11;-checks=clang-analyzer-*;--warnings-as-errors=clang-analyzer-*")
 
 file(GLOB_RECURSE ALL_CXX_SOURCE_FILES(${PROJECT_SOURCE_DIR}/src/*.[ch]pp))
 add_executable(e7fmgr ${ALL_CXX_SOURCE_FILES})
 target_link_libraries(e7fmgr PUBLIC PkgConfig::GTKMM3)
 
-# Can't organize by pairing with other CXX settings due to this needing
-# declaration of target, and CMAKE_CXX_CLANG_TIDY requiring to be declared before target.
 find_program(CLANG_FORMAT "clang-format(-[0-9]{1,2})?")
 if(CLANG_FORMAT)
     add_custom_command(TARGET e7fmgr
         PRE_BUILD
         COMMAND ${CLANG_FORMAT} -i -style=Google ${ALL_CXX_SOURCE_FILES}
+        DEPENDS e7fmgr
+    )
+endif()
+
+find_program(CLANG_TIDY "clang-tidy(-[0-9]{1,2})?")
+if(CLANG_TIDY)
+    add_custom_command(TARGET e7fmgr
+        PRE_BUILD
+        COMMAND ${CLANG_TIDY} -checks=clang-analyzer-* --warnings-as-errors=clang-analyzer-* -p ${PROJECT_SOURCE_DIR}/build ${ALL_CXX_SOURCE_FILES}
         DEPENDS e7fmgr
     )
 endif()
@@ -36,5 +42,3 @@ FetchContent_MakeAvailable(googletest)
 enable_testing()
 
 include(GoogleTest) 
-
-message("Done! Binary \"e7mgr\" is stored in build/")
