Adds configuration required to run GUI tests using GoogleTest on CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,25 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTKMM3 REQUIRED IMPORTED_TARGET gtkmm-3.0)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_COMPILE_FEATURES ${CMAKE_CXX_COMPILE_FEATURES} -g)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-file(GLOB_RECURSE ALL_CXX_SOURCE_FILES(${PROJECT_SOURCE_DIR}/src/*.[ch]pp))
+file(GLOB_RECURSE ALL_CXX_FILES(${PROJECT_SOURCE_DIR}/src/*.[ch]pp))
+file(GLOB_RECURSE ALL_CXX_TEST_FILES(${PROJECT_SOURCE_DIR}/src/*_test.[ch]pp))
+
+# Get the set difference to not compile tests as regular source files
+list(APPEND ALL_CXX_SOURCE_FILES ${ALL_CXX_FILES})
+list(REMOVE_ITEM ALL_CXX_SOURCE_FILES ${ALL_CXX_TEST_FILES})
+
 add_executable(e7fmgr ${ALL_CXX_SOURCE_FILES})
-target_link_libraries(e7fmgr PUBLIC PkgConfig::GTKMM3 absl::strings)
+target_link_libraries(e7fmgr PUBLIC PkgConfig::GTKMM3 absl::status)
 
 file(GLOB CLANG_FORMAT NAME "/usr/bin/clang-format-[0-9]*")
 if(CLANG_FORMAT)
     message("${CLANG_FORMAT} found!")
     add_custom_command(TARGET e7fmgr
         PRE_BUILD
-        COMMAND ${CLANG_FORMAT} -i -style=Google ${ALL_CXX_SOURCE_FILES}
+        COMMAND ${CLANG_FORMAT} -i -style=Google ${ALL_CXX_FILES}
         DEPENDS e7fmgr
     )
 else()
@@ -30,7 +37,7 @@ if(CLANG_TIDY)
     message("${CLANG_TIDY} found!")
     add_custom_command(TARGET e7fmgr
         PRE_BUILD
-        COMMAND ${CLANG_TIDY} -checks=clang-analyzer-* --warnings-as-errors=clang-analyzer-* -p ${PROJECT_SOURCE_DIR}/build ${ALL_CXX_SOURCE_FILES}
+        COMMAND ${CLANG_TIDY} -checks=clang-analyzer-* --warnings-as-errors=clang-analyzer-* -p ${PROJECT_SOURCE_DIR}/build ${ALL_CXX_FILES}
         DEPENDS e7fmgr
     )
 else()
@@ -46,8 +53,12 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 enable_testing()
+add_compile_options(-g)
+add_executable(gui_test ${PROJECT_SOURCE_DIR}/src/gui.hpp ${PROJECT_SOURCE_DIR}/src/gui.cpp ${PROJECT_SOURCE_DIR}/src/gui_test.cpp)
+target_link_libraries(gui_test PUBLIC gtest_main PkgConfig::GTKMM3 gmock_main absl::status)
 
-include(GoogleTest) 
+include(GoogleTest)
+gtest_discover_tests(gui_test)
 
 set(ABSL_PROPAGATE_CXX_STD ON)
 add_subdirectory(abseil-cpp)
