Add absl::Status matcher boilerplate code for GoogleTest.
GoogleTest does not have native support for absl::Status. https://github.com/abseil/abseil-cpp/issues/951 contains boilerplate code to support them at a basic level. This integrates this code as a temporary solution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,12 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 enable_testing()
 add_compile_options(-g)
-add_executable(gui_test ${PROJECT_SOURCE_DIR}/src/gui.hpp ${PROJECT_SOURCE_DIR}/src/gui.cpp ${PROJECT_SOURCE_DIR}/src/gui_test.cpp)
-target_link_libraries(gui_test PUBLIC gtest_main PkgConfig::GTKMM3 gmock_main absl::status)
+add_executable(gui_test 
+  ${PROJECT_SOURCE_DIR}/src/gui.hpp
+  ${PROJECT_SOURCE_DIR}/src/gui.cpp
+  ${PROJECT_SOURCE_DIR}/src/gui_test.cpp
+)
+target_link_libraries(gui_test PUBLIC gtest_main PkgConfig::GTKMM3 gmock_main absl::status absl::statusor)
 
 include(GoogleTest)
 gtest_discover_tests(gui_test)
