Add CMake configuration for directory changes.
This adds the files needed to the respective CMake targets in CMakeLists.txt to allow proper building of the project with the new file system changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ enable_testing()
 add_compile_options(-g)
 add_executable(gui_test 
   ${PROJECT_SOURCE_DIR}/src/filesystem.hpp
+  ${PROJECT_SOURCE_DIR}/src/filesystem.cpp
   ${PROJECT_SOURCE_DIR}/src/gui.hpp
   ${PROJECT_SOURCE_DIR}/src/gui.cpp
   ${PROJECT_SOURCE_DIR}/src/gui_test.cpp
