Implement network connection interface.
This adds the NetworkInterface API that will wrap any future system networking APIs. This also adds the NetworkConnection API that can be used to establish an active connection and perform duplex communication to a networking endpoint. It uses the NetworkInterface API to do this in a platform-agnostic manner. The NetworkInterface class can be derived from to implement the actual API calls to the system.

The MockNetworkInterface class was created to test the NetworkConnection class. The MockNetworkInterface class can be used to work with mock sockets, send back a certain amount of bytes, and to accept and send bytes in random intervals. It might be worthwile investing in making the MockNetworkInterface have a declarative programming model to make the behavior more customizable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,9 +70,17 @@ add_executable(filesystem_test
 )
 target_link_libraries(filesystem_test PUBLIC gtest_main PkgConfig::GTKMM3 gmock_main absl::status absl::statusor absl::strings)
 
+add_executable(network_test 
+  ${PROJECT_SOURCE_DIR}/src/network.hpp
+  ${PROJECT_SOURCE_DIR}/src/network.cpp
+  ${PROJECT_SOURCE_DIR}/src/network_test.cpp
+)
+target_link_libraries(network_test PUBLIC gtest_main PkgConfig::GTKMM3 gmock_main absl::status absl::statusor absl::strings)
+
 include(GoogleTest)
 gtest_discover_tests(gui_test)
 gtest_discover_tests(filesystem_test)
+gtest_discover_tests(network_test)
 
 set(ABSL_PROPAGATE_CXX_STD ON)
 add_subdirectory(abseil-cpp)
